2006-03-13  Matthias Hopf  <mhopf@suse.de>

	Needed for 'make distcheck':
	* GL/mesa/Makefile.am: Add glapi to DIST_SUBDIRS.
	* hw/xfree86/Makefile.am: Sync to trunk branch.

2006-03-11  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c (xglBindTexImage): Add missing break
	statement so that TEXTURE_RECTANGLE can be used again.

2006-03-10  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c:
	* GL/glx/glxscreens.c:
	* GL/glx/g_disptab_EXT.c:
	* GL/glx/rensizetab.c:
	* GL/glx/glxcmdsswap.c (__glXSwapVendorPrivateWithReply):
	* GL/glx/glxcmds.c (__glXVendorPrivateWithReply):
	GL_ARB_vertex_program and GL_ARB_fragment_program support.

	* hw/xgl/glxext/xglglxext.c: Remove renderbuffer from context.

	* GL/glx/indirect_dispatch_swap.c:
	* GL/glx/indirect_dispatch.c: New automatically generated code
	that includes GenProgramsNV fix to gl_API.xml.

	* GL/glx/single2.c: Add GetProgramStringARB implementation.

2006-03-09  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c (xglScreenProbe): Let mesa screen probe
	function call __glXScreenInit and then just copy the initialized
	values.
	(xglFreeContext): Make context current before we delete all gl objects.

	* GL/mesa/X/xf86glx.c (__glXMesaContextCreateDrawable): Get pGlxScreen
	from context.

	* configure.ac: Back out last change, Xorg and Xgl servers cannot yet
	be built at the same time.

	* GL/mesa/Makefile.am (SUBDIRS): Remove glapi from SUBDIRS, it
	shouldn't be there, glapi sources are now in $(top_srcdir)/GL/glx.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* GL/glx/Makefile.am: find xf86dristr.h again.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* GL/mesa/Makefile.am: added missing glapi to SUBDIRS.
	* cfb/Makefile.am, cfb16/Makefile.am, cfb24/Makefile.am, cfb32/Makefile.am:
	  Added missing -I$(top_srcdir)/hw/xfree86/common.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* configure.ac: Do Xorg configure checks for Xgl only as well